--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -9,12 +9,12 @@
   <author email="cburbridge@gmail.com">Chris Burbridge</author>
   <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
 
-
-  <license>GPL</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>rospy</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>message_generation</build_depend>
@@ -22,8 +22,11 @@
   <build_depend>rostest</build_depend>
   <build_depend>python-catkin-pkg</build_depend>
   <build_depend>mongodb</build_depend>
+  <build_depend>mongodb-dev</build_depend>
+  <build_depend>libssl-dev</build_depend>
 
   <run_depend>rospy</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>python-pymongo</run_depend>
