--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -2,12 +2,14 @@
 <package>
   <name>mongodb_store</name>
   <version>0.0.5</version>
-  <description>A MongoDB based central store for data from a ROS system, eg. configurations, logged states, etc</description>
+  <description>A package to support MongoDB-based storage and analysis for data from a ROS system, eg. saved messages, configurations etc</description>
 
   <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
   <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
   <author email="cburbridge@gmail.com">Chris Burbridge</author>
   <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
+
+  <url type="website">http://www.ros.org/wiki/mongodb_store</url>
 
   <license>MIT</license>
 
