--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -6,8 +6,8 @@
 
   <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
   <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
-  <author email="cburbridge@gmail.com">Chris Burbridge</author>
-  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
+  <author>Chris Burbridge</author>
+  <author>Nick Hawes</author>
 
   <url type="website">http://www.ros.org/wiki/mongodb_store</url>
 
