Launch file to right place this time.
It seems like the syntax is doing different things in different CMake files though.

--- a/mongodb_store/CMakeLists.txt
+++ b/mongodb_store/CMakeLists.txt
@@ -122,7 +122,7 @@ install(DIRECTORY scripts/
 # Mark other files for installation (e.g. launch and bag files, etc.)
 install(
   DIRECTORY launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 # Mark cpp header files for installation
