--- a/libmongocxx_ros/package.xml
+++ b/libmongocxx_ros/package.xml
@@ -41,6 +41,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>scons</buildtool_depend>
+  <build_depend>git</build_depend>
   <build_depend>libssl-dev</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>roscpp</build_depend>
