--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -26,6 +26,8 @@
   <build_depend>mongodb</build_depend>
   <build_depend>libssl-dev</build_depend>
   <build_depend>libmongocxx_ros</build_depend>
+  <build_depend>topic_tools</build_depend>
+
   <!-- Used for examples -->
   <build_depend>geometry_msgs</build_depend>
 
