--- a/libmongocxx_ros/package.xml
+++ b/libmongocxx_ros/package.xml
@@ -45,6 +45,7 @@
   <build_depend>libssl-dev</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>ca-certificates</build_depend>
   <run_depend>libssl-dev</run_depend>
   <run_depend>boost</run_depend>
   <run_depend>roscpp</run_depend>
