--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -23,8 +23,11 @@
   <build_depend>rostest</build_depend>
   <build_depend>python-catkin-pkg</build_depend>
   <build_depend>mongodb</build_depend>
-  <build_depend>libssl-dev</build_depend>
+  <!--this needs to get merged into rosdistro (PR sent)-->
+  <!--build_depend>libmongoclient-dev</build_depend-->
+  <build_depend>libssl-dev</build_depend> 
   <build_depend>topic_tools</build_depend>
+ 
 
   <!-- Used for examples -->
   <build_depend>geometry_msgs</build_depend>
@@ -36,6 +39,7 @@
   <run_depend>python-pymongo</run_depend>
   <run_depend>mongodb</run_depend>
   <run_depend>mongodb_store_msgs</run_depend>
+  <!--run_depend>libmongoclient-dev</run_depend-->
   <run_depend>topic_tools</run_depend>
   <!-- Used for examples -->
   <run_depend>geometry_msgs</run_depend>
