--- a/mongodb_store/CMakeLists.txt
+++ b/mongodb_store/CMakeLists.txt
@@ -6,14 +6,14 @@ if(DEFINED ENV{ROS_DISTRO})
   if(NOT $ENV{ROS_DISTRO} STREQUAL "indigo")
     add_compile_options(-std=c++11)
     message(STATUS "Building with C++11 support")
-  else() 
+  else()
     message(STATUS "ROS Indigo: building without C++11 support")
   endif()
 else()
   message(STATUS "Environmental variable ROS_DISTRO not defined, checking OS version")
   file(STRINGS /etc/os-release RELEASE_CODENAME
 		REGEX "VERSION_CODENAME=")
-  if(NOT ${RELEASE_CODENAME} MATCHES "trusty") 
+  if(NOT ${RELEASE_CODENAME} MATCHES "trusty")
     add_compile_options(-std=c++11)
     message(STATUS "OS distro is not trusty: building with C++11 support")
   else()
@@ -80,7 +80,7 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
-  #${MongoClient_INCLUDE_DIR} 
+  #${MongoClient_INCLUDE_DIR}
 )
 
 link_directories(${catkin_LINK_DIRS})
@@ -106,20 +106,20 @@ target_link_libraries(message_store
 # Specify libraries to link a library or executable target against
 target_link_libraries(example_mongodb_store_cpp_client
   message_store
-  #${MongoClient_LIBRARIES}  
-  ${catkin_LIBRARIES}  
+  #${MongoClient_LIBRARIES}
+  ${catkin_LIBRARIES}
 )
 
 target_link_libraries(example_multi_event_log
   message_store
-  #${MongoClient_LIBRARIES}  
-  ${catkin_LIBRARIES}  
+  #${MongoClient_LIBRARIES}
+  ${catkin_LIBRARIES}
 )
 
 target_link_libraries(example_multi_event_log
   message_store
-  #${MongoClient_LIBRARIES}  
-  ${catkin_LIBRARIES}  
+  #${MongoClient_LIBRARIES}
+  ${catkin_LIBRARIES}
 )
 
 
@@ -163,17 +163,18 @@ if (CATKIN_ENABLE_TESTING)
   find_package(catkin REQUIRED COMPONENTS rostest)
 
   add_rostest(tests/message_store.test)
+  add_rostest(tests/config_manager.test)
   add_rostest(tests/replication.test)
 
   add_executable(message_store_cpp_test tests/message_store_cpp_test.cpp)
 
   target_link_libraries(message_store_cpp_test
-    message_store 
-    ${OPENSSL_LIBRARIES} 
+    message_store
+    ${OPENSSL_LIBRARIES}
     ${catkin_LIBRARIES}
     ${Boost_LIBRARIES}
     gtest
-  ) 
+  )
 
   add_rostest(tests/message_store_cpp_client.test)
 
