--- a/mongodb_log/package.xml
+++ b/mongodb_log/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>mongodb_log</name>
   <version>0.5.2</version>
   <description>The mongodb_log package</description>
@@ -20,14 +20,15 @@
   <build_depend>libssl-dev</build_depend>
   <build_depend>mongodb_store</build_depend>
 
-  <run_depend>rospy</run_depend>
-  <run_depend>roslib</run_depend>
-  <run_depend>rosgraph</run_depend>
-  <run_depend>rostopic</run_depend>  
-  <run_depend>tf</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>python-pymongo</run_depend>
-  <run_depend>mongodb_store</run_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>roslib</exec_depend>
+  <exec_depend>rosgraph</exec_depend>
+  <exec_depend>rostopic</exec_depend>
+  <exec_depend>tf</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pymongo</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pymongo</exec_depend>
+  <exec_depend>mongodb_store</exec_depend>
 
   <export>
   </export>
