--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>mongodb_store</name>
   <version>0.5.2</version>
   <description>A package to support MongoDB-based storage and analysis for data from a ROS system, eg. saved messages, configurations etc</description>
@@ -21,7 +21,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>mongodb_store_msgs</build_depend>
   <build_depend>rostest</build_depend>
-  <build_depend>python-catkin-pkg</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend>
   <build_depend>mongodb</build_depend>
   <build_depend>libmongoclient-dev</build_depend>
   <build_depend>libssl-dev</build_depend> 
@@ -31,18 +32,20 @@
   <!-- Used for examples -->
   <build_depend>geometry_msgs</build_depend>
 
-  <run_depend>rospy</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>std_srvs</run_depend>
-  <run_depend>python-future</run_depend>
-  <run_depend>python-pymongo</run_depend>
-  <run_depend>mongodb</run_depend>
-  <run_depend>mongodb_store_msgs</run_depend>
-  <run_depend>libmongoclient-dev</run_depend>
-  <run_depend>topic_tools</run_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-future</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pymongo</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pymongo</exec_depend>
+  <exec_depend>mongodb</exec_depend>
+  <exec_depend>mongodb_store_msgs</exec_depend>
+  <exec_depend>libmongoclient-dev</exec_depend>
+  <exec_depend>topic_tools</exec_depend>
   <!-- Used for examples -->
-  <run_depend>geometry_msgs</run_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
   <export>
 	<rosdoc config="rosdoc.yaml"/>
