--- a/mongodb_log/CMakeLists.txt
+++ b/mongodb_log/CMakeLists.txt
@@ -138,7 +138,7 @@ target_link_libraries(mongodb_log_cimg
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-install(PROGRAMS
+catkin_install_python(PROGRAMS
   scripts/mongodb_log.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
